--- a/Table/menu.html
+++ b/Table/menu.html
@@ -10,13 +10,14 @@
     <table>
       <thead>
         <tr>
-          <th colspan="4">MENU</th>
+          <th colspan="5" id="main-head">MENU</th>
         </tr>
         <tr>
           <th>Item Code</th>
           <th>Name</th>
           <th>Price</th>
           <th>Quantity</th>
+          <th>Total</th>
         </tr>
       </thead>
       <tbody>
@@ -25,36 +26,41 @@
           <td>Pen</td>
           <td>50.00</td>
           <td>4</td>
+          <td>200.0</td>
         </tr>
         <tr>
           <td>2</td>
           <td>Pencil</td>
           <td>10.00</td>
           <td>3</td>
+          <td>30.00</td>
         </tr>
         <tr>
           <td>3</td>
           <td>Notebooks</td>
           <td>100.00</td>
           <td>2</td>
+          <td>200.00</td>
         </tr>
         <tr>
           <td>4</td>
           <td>Sticky Notes</td>
           <td>20.00</td>
-          <td>1</td>
+          <td>5</td>
+          <td>100.00</td>
         </tr>
         <tr>
           <td>5</td>
           <td>Folders</td>
           <td>100.00</td>
           <td>5</td>
+          <td>500.00</td>
         </tr>
       </tbody>
       <tfoot>
         <tr>
-            <td colspan="3">Total</td>
-            <td>0.0</td>
+            <td colspan="4">Total</td>
+            <td>1030.00</td>
         </tr>
       </tfoot>
     </table>
