--- a/RockPaperScissors/rps.html
+++ b/RockPaperScissors/rps.html
@@ -6,6 +6,18 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <div class="choices">
+        <div class="choice"></div>
+        <div class="choice"></div>
+        <div class="choice"></div>
+    </div>
+    <div class="score-board">
+        <div class="compScore">
+
+        </div>
+        <div class="playerScore">
+            
+        </div>
+    </div>
 </body>
 </html>
