--- a/Table/menu.html
+++ b/Table/menu.html
@@ -7,62 +7,67 @@
     <title>Menu</title>
   </head>
   <body>
+    <!-- <div class="heading">
+    </div> -->
+    <div class="header">
+      <h2>MENU</h2>
+      <div class="search">
+        <label for="search">Search</label>
+        <input type="text" name="search" id="search" />
+      </div>
+    </div>
     <table>
-      <thead>
-        <tr>
-          <th colspan="5" id="main-head">MENU</th>
-        </tr>
-        <tr>
-          <th>Item Code</th>
-          <th>Name</th>
-          <th>Price</th>
-          <th>Quantity</th>
-          <th>Total</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Pen</td>
-          <td>50.00</td>
-          <td>4</td>
-          <td>200.0</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Pencil</td>
-          <td>10.00</td>
-          <td>3</td>
-          <td>30.00</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Notebooks</td>
-          <td>100.00</td>
-          <td>2</td>
-          <td>200.00</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>Sticky Notes</td>
-          <td>20.00</td>
-          <td>5</td>
-          <td>100.00</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Folders</td>
-          <td>100.00</td>
-          <td>5</td>
-          <td>500.00</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-            <td colspan="4">Total</td>
-            <td>1030.00</td>
-        </tr>
-      </tfoot>
+      <tr>
+        <th colspan="5" id="main-head">MENU</th>
+      </tr>
+      <tr>
+        <th>Item Code</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Total</th>
+      </tr>
+
+      <tr>
+        <td>1</td>
+        <td>Pen</td>
+        <td>50.00</td>
+        <td>4</td>
+        <td>200.0</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Pencil</td>
+        <td>10.00</td>
+        <td>3</td>
+        <td>30.00</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Notebooks</td>
+        <td>100.00</td>
+        <td>2</td>
+        <td>200.00</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Sticky Notes</td>
+        <td>20.00</td>
+        <td>5</td>
+        <td>100.00</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>Folders</td>
+        <td>100.00</td>
+        <td>5</td>
+        <td>500.00</td>
+      </tr>
+
+      <tr>
+        <td colspan="4">Total</td>
+        <td>1030.00</td>
+      </tr>
     </table>
   </body>
 </html>
