--- a/Table/menu.html
+++ b/Table/menu.html
@@ -1,73 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="menu.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="menu.css">
     <title>Menu</title>
-  </head>
-  <body>
-    <!-- <div class="heading">
-    </div> -->
+</head>
+<body>
     <div class="header">
-      <h2>MENU</h2>
-      <div class="search">
-        <label for="search">Search</label>
-        <input type="text" name="search" id="search" />
-      </div>
+        <h2>MENU</h2>
+        <div class="search">
+            <label for="search">Search</label>
+            <input type="search" name="search" id="search">
+        </div>
     </div>
     <table>
-      <tr>
-        <th colspan="5" id="main-head">MENU</th>
-      </tr>
-      <tr>
-        <th>Item Code</th>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th>Total</th>
-      </tr>
-
-      <tr>
-        <td>1</td>
-        <td>Pen</td>
-        <td>50.00</td>
-        <td>4</td>
-        <td>200.0</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Pencil</td>
-        <td>10.00</td>
-        <td>3</td>
-        <td>30.00</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>Notebooks</td>
-        <td>100.00</td>
-        <td>2</td>
-        <td>200.00</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>Sticky Notes</td>
-        <td>20.00</td>
-        <td>5</td>
-        <td>100.00</td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td>Folders</td>
-        <td>100.00</td>
-        <td>5</td>
-        <td>500.00</td>
-      </tr>
-
-      <tr>
-        <td colspan="4">Total</td>
-        <td>1030.00</td>
-      </tr>
+        <thead>
+            <tr>
+                <th>Item Code</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Category</th>
+                <th>Rating</th>
+            </tr>
+        </thead>
+        <tbody id="table-body">
+            
+        </tbody>
     </table>
-  </body>
+    
+    <script src="menu.js"></script>
+</body>
 </html>
