--- a/Table/menu.html
+++ b/Table/menu.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="menu.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="menu.css" />
     <title>Menu</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <h2>MENU</h2>
-        <div class="search">
-            <label for="search">Search</label>
-            <input type="search" name="search" id="search">
-        </div>
+      <h2>MENU</h2>
+      <div class="search">
+        <label for="search">Search</label>
+        <input type="search" name="search" id="search" />
+      </div>
     </div>
-    <table>
+    <div class="content">
+      <table>
         <thead>
-            <tr>
-                <th>Item Code</th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Category</th>
-                <th>Rating</th>
-            </tr>
+          <tr>
+            <th>Item Code</th>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Category</th>
+            <th>Rating</th>
+          </tr>
         </thead>
-        <tbody id="table-body">
-            
-        </tbody>
-    </table>
-    
+        <tbody id="table-body"></tbody>
+      </table>
+    </div>
+    <div id="pagination"></div>
     <script src="menu.js"></script>
-</body>
+  </body>
 </html>
