--- a/Table/menu.html
+++ b/Table/menu.html
@@ -9,6 +9,9 @@
   <body>
     <div class="header">
       <h2>MENU</h2>
+      <select name="opt" id="dropdown">
+ 
+      </select>
       <div class="search">
         <label for="search">Search</label>
         <input type="search" name="search" id="search" />
