single product page

--- a/Table/product.html
+++ b/Table/product.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="product.css" />
+    <link rel="stylesheet" href="review.css" />
     <title>Product Details</title>
   </head>
   <body>
-    <div class="productContainer">
-
+    <div class="productContainer"></div>
+    <div class="reviewContainer"></div>
+    <div class="btnContainer"></div>
     <script src="product.js"></script>
-    </body>
+  </body>
 </html>
