--- a/Table/reviewForm.html
+++ b/Table/reviewForm.html
@@ -3,13 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="review.css" />
+    <link rel="stylesheet" href="reviewForm.css" />
     <title>Review</title>
   </head>
   <body>
-     <div class="reviewForm">
-          
-     </div>
+    <div class="reviewForm">
+        <form action="">
+          <label for="fname">First Name</label>
+          <input
+            type="text"
+            id="fname"
+            name="firstname"
+            placeholder="Your name.."
+          />
 
+          <label for="lname">Last Name</label>
+          <input
+            type="text"
+            id="lname"
+            name="lastname"
+            placeholder="Your last name.."
+          />
+          <label for="rating">Rating</label>
+          <input type="text" id="rating" placeholder="Rate the product..">
+          <label for="subject">Review</label>
+          <textarea
+            id="subject"
+            name="subject"
+            placeholder="Write something.."
+            style="height: 150px"
+          ></textarea>
+
+          <input type="submit" value="Submit" />
+        </form>
+      
+    </div>
+    <script src="reviewForm.js"></script>
   </body>
 </html>
