--- a/Table/product.html
+++ b/Table/product.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="product.css" />
     <link rel="stylesheet" href="review.css" />
+    <link rel="stylesheet" href="reviewForm.css">
     <title>Product Details</title>
   </head>
   <body>
     <div class="productContainer"></div>
     <div class="reviewContainer"></div>
-    <div class="btnContainer"></div>
+    <div class="reviewForm"></div>
     <script src="product.js"></script>
   </body>
 </html>
